--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,12 @@
-
+scikit-learn==0.24.2
+spacy==3.4.0
+textacy==0.11.0
+pronouncing==0.2.0
+pandas>=1.3.4
+levenshtein==0.20.1
+lexical-diversity==0.1.1
+nltk==3.6.5
+tensorflow==2.7.0
+g2p-en==2.1.0
+textstat==0.7.3
+openpyxl>=3.0.0
