--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
+protobuf==3.20.*
 scikit-learn==0.24.2
-spacy==3.4.1
+spacy==3.2.4
+spacy-transformers==1.1.2
 textacy==0.11.0
 pronouncing==0.2.0
 pandas>=1.3.4
