--- a/requirements.txt
+++ b/requirements.txt
@@ -4,11 +4,11 @@ spacy==3.2.4
 spacy-transformers==1.1.2
 textacy==0.11.0
 pronouncing==0.2.0
-pandas>=1.3.4
+pandas==1.3.4
 levenshtein==0.20.1
 lexical-diversity==0.1.1
 nltk==3.6.5
 tensorflow==2.7.0
 g2p-en==2.1.0
 textstat==0.7.3
-openpyxl>=3.0.0
+openpyxl==3.0.10
