--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,20 @@
+fasttext-wheel
 fasttext-langdetect==1.0.5
-protobuf==3.20.1
-scikit-learn==0.24.2
-spacy==3.2.4
-spacy-transformers==1.1.2
+scikit-learn==1.4.0
+spacy==3.7.2
+spacy-transformers==2.3.1
 textacy==0.11.0
 pronouncing==0.2.0
-pandas==1.3.4
-levenshtein==0.20.1
+pandas==2.2.0
+levenshtein==0.23.0
 lexical-diversity==0.1.1
-nltk==3.6.5
-tensorflow==2.7.0
+nltk==3.8.1
+tensorflow==2.15.0
 g2p-en==2.1.0
 textstat==0.7.3
-openpyxl==3.0.10
-openai==0.27.0
-transformers==4.11.3
-typing_extensions==4.4.0
-faster_whisper==0.9.0
-youtube_dl
+openpyxl==3.1.2
+openai==1.10.0
+transformers==4.37.1
+typing_extensions==4.9.0
+faster_whisper==0.10.0
+"git+https://github.com/ytdl-org/youtube-dl.git"
